
4.04  2013-05-23

4.03  2013-05-21
  - Fixed redirect support in get command.

4.02  2013-05-20
  - Fixed extends, layout and title helpers not to generate unnecessary log
    messages.

4.01  2013-05-19
  - Fixed small drain event bug in Mojo::IOLoop::Stream. (ChinaXing)

4.0  2013-05-15
  - Code name "Top Hat", this is a major release.
  - Added simple JSON serialization and deserialization support to
    Mojo::Transaction::WebSocket.
  - Added json event to Mojo::Transaction::WebSocket.
  - Added render_maybe method to Mojolicious::Controller.
  - Added again method to Mojo::Reactor, Mojo::Reactor::Poll and
    Mojo::Reactor::EV.
  - Added is_empty method to Mojo::Transaction::HTTP.
  - Added close_gracefully method to Mojo::IOLoop::Stream.
  - Changed Mojolicious default secret to the application moniker to make it
    slightly more secure.
  - Changed types in Mojolicious::Types to consistently use arrays.
  - Changed heuristics for number detection in Mojo::JSON to better line up
    with user expectations.
  - Changed render and render_static methods in Mojolicious::Controller to
    call render_not_found if no response could be generated.
  - Removed callback support from body method in Mojo::Message.
  - Removed Mojolicious::Plugin::PoweredBy and
    Mojolicious::Plugin::RequestTimer.
  - Removed pair_separator attribute from Mojolicious::Parameters.
  - Removed data attribute from Mojo::URL.
  - Removed captures attribute from Mojolicious::Routes::Match.
  - Removed charset attribute from Mojo::DOM::HTML.
  - Removed charset method from Mojo::DOM.
  - Removed render_data, render_json, render_partial and render_text methods
    from Mojolicious::Controller.
  - Removed json_content_is method from Test::Mojo.
  - Removed has_leftovers method from Mojo::Content.
  - Removed is_chunked, is_dynamic, is_multipart, has_leftovers, leftovers,
    write and write_chunk methods from Mojo::Message.
  - Removed hmac_md5_sum method from Mojo::ByteStream.