@@ -134,8 +134,11 @@ sub websocket {
   my $self = shift;
 
   # New WebSocket transaction
-  my $tx    = $self->tx(GET => @_);
-  my $url   = $tx->req->url;
+  my $protos = ref $_[-1] eq 'ARRAY' ? pop : [];
+  my $tx = $self->tx(GET => @_);
+  my $req = $tx->req;
+  $req->headers->sec_websocket_protocol(join ', ', @$protos) if @$protos;
+  my $url   = $req->url;
   my $proto = $url->protocol;
   $url->scheme($proto eq 'wss' ? 'https' : 'http') if $proto;
 
@@ -410,7 +413,7 @@ handshake if possible.
 =head2 websocket
 
   my $tx = $t->websocket('ws://localhost:3000');
-  my $tx = $t->websocket('ws://localhost:3000' => {DNT => 1});
+  my $tx = $t->websocket('ws://localhost:3000' => {DNT => 1} => ['proto']);
 
 Versatile L<Mojo::Transaction::HTTP> transaction builder for WebSocket
 handshake requests.
