@@ -101,20 +101,22 @@ post {data => 'plain nested too!'};
 
 my $t = Test::Mojo->new;
 
-# Default protocol
-$t->websocket_ok('/echo')->header_is('Sec-WebSocket-Protocol' => 'mojo')
-  ->send_ok('hello')->message_ok('got a message')->message_is('echo: hello')
-  ->finish_ok;
+# Simple roundtrip
+$t->websocket_ok('/echo')->send_ok('hello')->message_ok('got a message')
+  ->message_is('echo: hello')->finish_ok;
 
 # Multiple roundtrips
 $t->websocket_ok('/echo')->send_ok('hello again')
   ->message_ok->message_is('echo: hello again')->send_ok('and one more time')
   ->message_ok->message_is('echo: and one more time')->finish_ok;
 
-# Custom protocol
-$t->websocket_ok('/echo', {'Sec-WebSocket-Protocol' => 'foo, bar, baz'})
+# Custom header and protocols
+$t->websocket_ok('/echo' => {DNT => 1} => ['foo', 'bar', 'baz'])
   ->header_is('Sec-WebSocket-Protocol' => 'foo')->send_ok('hello')
   ->message_ok->message_is('echo: hello')->finish_ok;
+is $t->tx->req->headers->dnt, 1, 'right "DNT" value';
+is $t->tx->req->headers->sec_websocket_protocol, 'foo, bar, baz',
+  'right "Sec-WebSocket-Protocol" value';
 
 # Bytes
 $t->websocket_ok('/echo')->send_ok({binary => 'bytes!'})
